fix small stuff like alignements

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -163,8 +163,6 @@
       height: 200px;
       width: 200px;
       border: solid 2px $primary-yellow;
-      border-radius: 5px;
-
     }
   }
 }
